Hotfix: Solves mobile layout issues

--- a/src/css/Acerca.module.css
+++ b/src/css/Acerca.module.css
@@ -25,6 +25,7 @@
   margin: 0 auto;
   margin-bottom: 2rem;
   line-height: 1;
+  word-break: break-all;
 }
 
 @keyframes title {
@@ -59,13 +60,14 @@
 
 @media only screen and (max-width: 600px) {
   .container {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     flex-direction: column;
   }
   .contentContainer {
     display: flex;
     flex-direction: column;
+    width: 90%;
   }
   .title {
     font-family: 'Karla', sans-serif;
