--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -99,7 +99,6 @@
 
   .menulist {
     justify-content: space-around;
-    width: 50%;
     margin: 0 auto;
   }
 
